Address Illegal Access issues on Java 16